Thu May 29 21:08:24 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* do_as_req.c (process_as_req), do_tgs_req (process_tgs_req): Use
		limit_string() to make sure the length of cname and sname
		are reasonable.

	* kdc_util.c (limit_string): New function which limits the strings
		that will end up in log files to "reasonable" lengths.

Tue Feb 18 09:56:16 1997  Ezra Peisach  <epeisach@mit.edu>

	* kerberos_v4.c: Remove include of krb4-proto.h

Tue Feb 18 18:51:09 1997  Richard Basch  <basch@lehman.com>

	* do_as_req.c do_tgs_req.c kdc_preauth.c kdc_util.c main.c
	replay.c kerberos_v4.c:
		Replace krb5_xfree with appropriate free routine.

Thu Feb  6 00:09:46 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Remove logger.c target before copying over it.
		This avoids permission problems if the source is read-only
		and later changes.

Wed Jan  1 22:56:16 1997  Ezra Peisach  <epeisach@mit.edu>

	* kdc_preauth.c (get_sam_edata): Use proper interface to
		krb5_db_get_principal. Also if SAM is not an option, do
		not return as a possible type to client. [krb5-kdc/310]

Fri Jan 31 21:39:04 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (LOCALINCLUDE): Change  KRB4_INCLUDE to KRB4_INCLUDES

Fri Jan 31 19:45:13 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Sat Nov 23 17:26:22 1996  Mark Eichin  <eichin@kitten.gen.ma.us>

	* [krb5-libs/149] only generate requests that you can actually
	handle.
	
	Tue Sep  3 22:53:56 1996  Mark Eichin  <eichin@cygnus.com>

	* kdc_preauth.c (get_preauth_hint_list): detect ap->get_edata
	return status and don't pass back hint if it failed.
	(get_etype_info): malloc one more word in entry for end marker.

Wed Nov 20 11:25:05 1996  Barry Jaspan  <bjaspan@mit.edu>

	* main.c (initialize_realms): krb5_aprof_init can succeed while
 	leaving aprof == NULL, but krb5_aprof_finish will fail.  This is
 	just more grossness that needs to be redone when the kdc.conf